# processware

./: .gitignore  README.md  pyproject.toml  전용AI에이전트_프레임워크_설계안.md  표준_프로세스_실행_가이드.md  표준_프로세스_심사_가이드.md  표준_프로세스_제개정_가이드.md  표준프로세스_AI관리체계_4차원PDCA.md
.claude/agents/: act-coordinator.md  act-trigger.md  audit-planner.md  audit-reporter.md  backfill-matcher.md  compliance-checker.md  escalation-coordinator.md  evidence-collector.md  flow-mapper.md  flow-proposer.md  gap-analyzer.md  gap-exporter.md  gap-reporter.md  hitl-gatekeeper.md  independence-guard.md  kpi-analyzer.md  kpi-collector.md  ncr-drafter.md  pcb-gatekeeper.md  qa-reviewer.md  (+9 more)
_sessions/: 2026-05-02_dim3-4_closed-loop.md
docs/: AI-Driven CMMI Operating Platform.md  Redmine_연동_설계서.md  세션회고_2026-05-03_사용자매뉴얼_저장소명.md  세션회고_2026-05-03_플랫폼_범용화_설계.md  세션회고_2026-05-05_PRO-WI_선후관계_Business-Process-Flow.md  세션회고_2026-05-05_REC백필_OCR플래그.md  세션회고_2026-05-05_미결항목_완전해소.md  세션회고_2026-05-05_백필_전처리_scope.md  세션회고_2026-05-05_아키텍처개선_process-audit.md  세션회고_2026-05-06_Redmine_구현_Phase1-5.md  세션회고_2026-05-06_publish폴더_아키텍처논의.md  세션회고_2026-05-06_문서화_정합성_설계안_갱신.md  세션회고_2026-05-06_외부시스템_연동_Redmine설계.md  세션회고_2026-05-07_processmine_Phase1_구현.md  세션회고_2026-05-07_vault_rules_CLI_코드화.md  세션회고_2026-05-13_RFP파생프로덕트_분리와_코어순수화.md  전용AI에이전트_프레임워크_설계안.md  표준_빌드_워크플로우_가이드.md  표준_프로세스_실행_가이드.md  표준_프로세스_제개정_가이드.md  표준프로세스_AI관리체계_4차원PDCA.md  프로세스 정제 필요성.md
inputs/: README.md
processmine/: config.py
publish/: base_adapter.py  config.yaml  dispatcher.py
sources/: README.md
tools/: hwpx_extract.py  rfp_parser.py
vault/: README.md
(+1775 files in other folders)
