[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "processmine"
version = "0.1.0"
description = "AI-driven process standard management framework"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "sqlalchemy>=2.0",
    "typer>=0.12",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
processmine = "processmine.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["processmine*", "tools*"]
